[gd_scene load_steps=7 format=3 uid="uid://cr4wh8k8gaysv"]

[ext_resource type="Shader" path="res://Player/Attack/javelin.gdshader" id="1_anyor"]
[ext_resource type="Script" path="res://Player/Attack/javelin.gd" id="1_ro7n8"]
[ext_resource type="AudioStream" uid="uid://ckro6v281rcab" path="res://Audio/SoundEffect/woosh.wav" id="3_6kycs"]
[ext_resource type="Texture2D" uid="uid://sr1vrxsmmgbn" path="res://Textures/Items/Weapons/flute.png" id="3_dtdno"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r1nq5"]
shader = ExtResource("1_anyor")
shader_parameter/opacity = 0.615
shader_parameter/r = 0.0
shader_parameter/g = 0.0
shader_parameter/b = 0.7
shader_parameter/mix_color = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ojwf"]
size = Vector2(4.24264, 32.5269)

[node name="Javelin" type="Area2D" groups=["attack"]]
top_level = true
use_parent_material = true
collision_layer = 4
collision_mask = 0
script = ExtResource("1_ro7n8")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_r1nq5")
position = Vector2(-7.45058e-09, 5.96046e-08)
rotation = 1.57282
scale = Vector2(0.13162, 0.13162)
texture = ExtResource("3_dtdno")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
rotation = -0.785398
shape = SubResource("RectangleShape2D_5ojwf")
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true
autostart = true

[node name="ChangeDirection" type="Timer" parent="."]
unique_name_in_owner = true

[node name="ResetPosTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="snd_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6kycs")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="ChangeDirection" to="." method="_on_change_direction_timeout"]
[connection signal="timeout" from="ResetPosTimer" to="." method="_on_reset_pos_timer_timeout"]
